hello-world-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-world

  template:
    metadata:
      labels:
        app: hello-world

    spec:
      containers:
        - name: hello-world

          image: <ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/hello-world:latest

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "200m"
              memory: "256Mi"
