hello-world-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world

spec:
  type: LoadBalancer

  selector:
    app: hello-world

  ports:
    - port: 80
      targetPort: 3000
