hello-world-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress

spec:
  rules:
  - host: hello.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: hello-world
            port:
              number: 80
